--- a/order/index.html
+++ b/order/index.html
@@ -5,15 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Stone Grill's  — Online Reservation</title>
+
+  <!-- Minimal styles for GCash number popup -->
   <style>
-  .gcash-number { font-size:1.1rem; letter-spacing:.5px; font-weight:600; }
-  .receipt-upload-block { margin-top:12px; padding:12px; border-radius:10px; background:rgba(0,0,0,0.04); }
-  .receipt-upload-block h4 { margin:0 0 8px; font-size:1.02rem; }
-  .receipt-status { margin-top:8px; font-size:.92rem; }
-  .popup .meta { font-size:.9rem; color:#666; margin:6px 0 10px; }
-  .popup .row-sb { display:flex; justify-content:space-between; align-items:center; gap:10px; }
-  .popup .small { font-size:.9rem; }
-</style>
+    .gcash-number { font-size:1.1rem; letter-spacing:.5px; font-weight:600; }
+    .receipt-upload-block { margin-top:12px; padding:12px; border-radius:10px; background:rgba(0,0,0,0.04); }
+    .receipt-upload-block h4 { margin:0 0 8px; font-size:1.02rem; }
+    .receipt-status { margin-top:8px; font-size:.92rem; }
+    .popup .meta { font-size:.9rem; color:#666; margin:6px 0 10px; }
+    .popup .row-sb { display:flex; justify-content:space-between; align-items:center; gap:10px; }
+    .popup .small { font-size:.9rem; }
+  </style>
+
   <!-- Meta Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
@@ -39,7 +42,7 @@
   <meta name="author" content="Stone Grill Restaurant">
   <link rel="canonical" href="https://stonegrillresto.net/order/">
 
-  <!-- Open Graph (Facebook / Messenger) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Stone Grill Restaurant — Order Online">
   <meta property="og:description" content="Enjoy hot sizzling meals, seafood platters, and more — order online for dine-in or take-out at Stone Grill Restaurant, Leyte.">
   <meta property="og:type" content="website">
@@ -51,7 +54,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
-  <meta name="twitter:description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant.">
+  <meta name="twitter:description" content="Order sizzling plates, seafood, and Filipino favorites from Stone Grill Restaurant.">
   <meta name="twitter:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
 
   <!-- Theme / Icons / CSS -->
@@ -80,24 +83,6 @@
     ]
   }
   </script>
-
-  <!-- NEW: Minimal styles for the GCash Payment popup (safe to move to style.css) -->
-  <style>
-    .tabbar { display:flex; gap:8px; margin:8px 0 12px; }
-    .tabbar .tab { padding:8px 12px; border-radius:8px; border:1px solid #ddd; cursor:pointer; }
-    .tab.active { background:#8db600; color:#fff; border-color:#8db600; }
-    .pay-pane { display:none; }
-    .pay-pane.active { display:block; }
-    .gcash-number { font-size:1.1rem; letter-spacing:.5px; font-weight:600; }
-    .qr-wrap { text-align:center; }
-    .qr-wrap img { max-width:260px; width:100%; border-radius:10px; box-shadow:0 4px 14px rgba(0,0,0,.12); }
-    .receipt-upload-block { margin-top:12px; padding:12px; border-radius:10px; background:rgba(0,0,0,0.04); }
-    .receipt-upload-block h4 { margin:0 0 8px; font-size:1.02rem; }
-    .receipt-status { margin-top:8px; font-size:.92rem; }
-    .popup .meta { font-size:.9rem; color:#666; margin:6px 0 10px; }
-    .popup .row-sb { display:flex; justify-content:space-between; align-items:center; gap:10px; }
-    .popup .small { font-size:.9rem; }
-  </style>
 </head>
 
 <body>
@@ -111,7 +96,7 @@
       </div>
     </a>
 
-    <!-- Cart summary (stacked: label -> total -> checkout) -->
+    <!-- Cart summary (stacked) -->
     <div class="cart-summary">
       <div class="total-label">Total</div>
       <div id="cartTotal" class="total-value">₱0</div>
@@ -123,10 +108,7 @@
   <main class="app-main">
     <!-- Menu -->
     <section class="menu-col">
-      <!-- Category buttons will be built dynamically -->
       <div class="category-bar" id="categoryBar"></div>
-
-      <!-- Product list -->
       <div id="menuList" class="menu-list"></div>
     </section>
 
@@ -136,7 +118,6 @@
         <h2 class="card-title">🦾 Your Order</h2>
         <div id="cartItems" class="cart-items"></div>
 
-        <!-- Subtotal -->
         <div class="cart-totals">
           <div class="row">
             <span>Subtotal</span>
@@ -222,7 +203,6 @@
     </div>
   </div>
 
-  <!-- How to Order Popup -->
   <div id="howToOrderPopup" class="popup-backdrop hidden" aria-hidden="true">
     <div class="popup" role="dialog" aria-modal="true" aria-labelledby="howtoTitle">
       <button class="popup-close" aria-label="Close">×</button>
@@ -240,32 +220,31 @@
   </div>
 
   <!-- GCash Payment Popup (Number only + Receipt upload) -->
-<div id="paymentPopup" class="popup-backdrop hidden" aria-hidden="true">
-  <div class="popup" role="dialog" aria-modal="true" aria-labelledby="payTitle">
-    <button class="popup-close" aria-label="Close">×</button>
+  <div id="paymentPopup" class="popup-backdrop hidden" aria-hidden="true">
+    <div class="popup" role="dialog" aria-modal="true" aria-labelledby="payTitle">
+      <button class="popup-close" aria-label="Close">×</button>
 
-    <h3 id="payTitle" class="popup-title">Pay with GCash</h3>
-    <div class="meta" id="payMeta">Order: <span id="payOrderId">—</span> • Total: <span id="payTotal">₱0</span></div>
+      <h3 id="payTitle" class="popup-title">Pay with GCash</h3>
+      <div class="meta" id="payMeta">Order: <span id="payOrderId">—</span> • Total: <span id="payTotal">₱0</span></div>
 
-    <!-- Number only -->
-    <div class="row-sb">
-      <div>
-        <div class="small">Send payment to this GCash number</div>
-        <div class="gcash-number" id="gcashMobileText">+63 9XX XXX XXXX</div>
-        <div class="small" id="gcashAccountName" style="opacity:.85;">Account: Stone Grill Restaurant</div>
+      <div class="row-sb">
+        <div>
+          <div class="small">Send payment to this GCash number</div>
+          <div class="gcash-number" id="gcashMobileText">+63 9XX XXX XXXX</div>
+          <div class="small" id="gcashAccountName" style="opacity:.85;">Account: Stone Grill Restaurant</div>
+        </div>
+        <button id="btnCopyNumber" class="btn">Copy</button>
       </div>
-      <button id="btnCopyNumber" class="btn">Copy</button>
-    </div>
 
-    <!-- Receipt upload -->
-    <div class="receipt-upload-block">
-      <h4>Upload Payment Receipt</h4>
-      <input id="gcashReceiptInput" type="file" accept="image/*" capture="environment" />
-      <button id="btnSendReceipt" class="btn primary">Send Receipt to Stone Grill</button>
-      <div id="receiptStatus" class="receipt-status" aria-live="polite"></div>
+      <div class="receipt-upload-block">
+        <h4>Upload Payment Receipt</h4>
+        <input id="gcashReceiptInput" type="file" accept="image/*" capture="environment" />
+        <button id="btnSendReceipt" class="btn primary">Send Receipt to Stone Grill</button>
+        <div id="receiptStatus" class="receipt-status" aria-live="polite"></div>
+      </div>
     </div>
   </div>
-</div>
+
   <!-- Toast -->
   <div id="toast" class="toast hidden"></div>
 
@@ -273,139 +252,98 @@
   <script src="config.js?v=13"></script>
   <script src="main.js?v=13"></script>
 
-  <!-- NEW: Payment popup controller + Direct-to-Telegram receipt upload -->
+  <!-- Payment popup controller + Direct-to-Telegram receipt upload -->
   <script>
   (function () {
-    // Helpers
     function show(el){ el.classList.remove('hidden'); el.setAttribute('aria-hidden','false'); }
     function hide(el){ el.classList.add('hidden'); el.setAttribute('aria-hidden','true'); }
 
-    // Tabs
-    const tabQR = document.getElementById('tabQR');
-    const tabNumber = document.getElementById('tabNumber');
-    const paneQR = document.getElementById('paneQR');
-    const paneNumber = document.getElementById('paneNumber');
-    function activate(tab, pane) {
-      [tabQR, tabNumber].forEach(t => t.classList.remove('active'));
-      [paneQR, paneNumber].forEach(p => p.classList.remove('active'));
-      tab.classList.add('active'); pane.classList.add('active');
-      tab.setAttribute('aria-selected','true');
-      (tab === tabQR ? tabNumber : tabQR).setAttribute('aria-selected','false');
-    }
-    if (tabQR && tabNumber) {
-      tabQR.addEventListener('click', () => activate(tabQR, paneQR));
-      tabNumber.addEventListener('click', () => activate(tabNumber, paneNumber));
-    }
-
-    // Copy number
-    const btnCopy = document.getElementById('btnCopyNumber');
-    if (btnCopy) {
-      btnCopy.addEventListener('click', async () => {
-        const txt = document.getElementById('gcashMobileText').textContent.trim();
-        try { await navigator.clipboard.writeText(txt); btnCopy.textContent = 'Copied'; setTimeout(()=>btnCopy.textContent='Copy',1200); }
-        catch { alert('Copy failed. Please long-press and copy.'); }
-      });
-    }
-
-    // Close button
-    document.querySelectorAll('#paymentPopup .popup-close').forEach(btn => {
-      btn.addEventListener('click', () => hide(document.getElementById('paymentPopup')));
+    // Close
+    document.addEventListener('click', (e)=>{
+      if (e.target.closest('#paymentPopup .popup-close')) {
+        hide(document.getElementById('paymentPopup'));
+      }
     });
 
-    // Expose: call this after successful order (from main.js)
+    // Copy number
+    document.addEventListener('click', async (e)=>{
+      if (e.target && e.target.id === 'btnCopyNumber') {
+        const txt = (document.getElementById('gcashMobileText')?.textContent || '').trim();
+        try { await navigator.clipboard.writeText(txt); e.target.textContent='Copied'; setTimeout(()=>e.target.textContent='Copy',1200); }
+        catch { alert('Copy failed. Long-press to copy.'); }
+      }
+    });
+
+    // Expose: call this after successful order
     window.showGcashPopup = function(orderId, totalAmount) {
       const pop = document.getElementById('paymentPopup');
+      if (!pop) return;
+
       document.getElementById('payOrderId').textContent = orderId || '—';
       document.getElementById('payTotal').textContent = (typeof totalAmount === 'number'
         ? '₱' + totalAmount.toLocaleString()
         : (totalAmount || '₱0'));
 
-      // Fill QR & number from config
-      const qr = (window.APP && (window.APP.GCASH_QR_URL || window.APP.gcashQrUrl));
-      const qrImg = document.getElementById('gcashQrImg');
-      qrImg.src = qr || 'assets/placeholder-qr.png';
-
+      // Fill number & account from config
       const mobileTxt = document.getElementById('gcashMobileText');
-      const acctName = document.getElementById('gcashAccountName');
-      const mobile = window.APP && (window.APP.GCASH_MOBILE || window.APP.gcashMobile);
-      const acct   = window.APP && (window.APP.GCASH_ACCOUNT_NAME || window.APP.gcashAccountName);
-      if (mobile) mobileTxt.textContent = mobile;
-      if (acct)   acctName.textContent = 'Account: ' + acct;
-
-      // Default to QR tab
-      activate(tabQR, paneQR);
-      show(pop);
+      const acctName  = document.getElementById('gcashAccountName');
+      if (window.APP?.GCASH_MOBILE)       mobileTxt.textContent = window.APP.GCASH_MOBILE;
+      if (window.APP?.GCASH_ACCOUNT_NAME) acctName.textContent  = 'Account: ' + window.APP.GCASH_ACCOUNT_NAME;
 
       // Save globals for caption
       window.currentOrderId = orderId || '';
       window.currentOrderTotal = totalAmount || '';
+
+      show(pop);
     };
 
-    // === Direct-to-Telegram receipt upload ===
-    const sendBtn = document.getElementById('btnSendReceipt');
-    const fileInput = document.getElementById('gcashReceiptInput');
-    const statusEl = document.getElementById('receiptStatus');
+    // Receipt upload (direct to Telegram; CORS-safe fallback)
+    document.addEventListener('click', async (e)=>{
+      if (!e.target || e.target.id !== 'btnSendReceipt') return;
 
-    function getField(id, fallback='') {
-      const el = document.getElementById(id);
-      return (el && el.value || fallback).toString().trim();
-    }
+      const fileInput = document.getElementById('gcashReceiptInput');
+      const statusEl  = document.getElementById('receiptStatus');
+      if (!fileInput?.files?.length) { statusEl.textContent = 'Please select a receipt image first.'; return; }
 
-    if (sendBtn && fileInput && statusEl) {
-      sendBtn.addEventListener('click', async () => {
-        if (!fileInput.files || !fileInput.files.length) {
-          statusEl.textContent = 'Please select a receipt image first.';
-          return;
-        }
-        const token = window.APP && (window.APP.TELEGRAM_BOT_TOKEN || window.APP.telegramBotToken);
-        const chatId = window.APP && (window.APP.TELEGRAM_CHAT_ID || window.APP.telegramChatId);
-        if (!token || !chatId) {
-          statusEl.textContent = 'Bot is not configured. Please contact the restaurant.';
-          return;
-        }
+      const token  = window.APP?.TELEGRAM_BOT_TOKEN;
+      const chatId = window.APP?.TELEGRAM_CHAT_ID;
+      if (!token || !chatId) { statusEl.textContent = 'Bot not configured.'; return; }
 
-        statusEl.textContent = 'Sending receipt…';
+      statusEl.textContent = 'Sending receipt…';
 
-        const fullName = getField('fullName', 'Unknown Customer');
-        const mobile   = getField('mobileNumber', 'N/A');
-        const orderId  = (window.currentOrderId || 'N/A');
-        const total    = (window.currentOrderTotal ? `₱${window.currentOrderTotal}` : null);
+      const fullName = (document.getElementById('fullName')?.value || 'Unknown Customer').trim();
+      const mobile   = (document.getElementById('mobileNumber')?.value || 'N/A').trim();
+      const orderId  = window.currentOrderId || 'N/A';
+      const total    = window.currentOrderTotal ? `₱${window.currentOrderTotal}` : null;
 
-        const caption = [
-          '🧾 GCash Receipt Received',
-          `• Order ID: ${orderId}`,
-          total ? `• Total: ${total}` : null,
-          `• Name: ${fullName}`,
-          `• Mobile: ${mobile}`
-        ].filter(Boolean).join('\n');
+      const caption = [
+        '🧾 GCash Receipt Received',
+        `• Order ID: ${orderId}`,
+        total ? `• Total: ${total}` : null,
+        `• Name: ${fullName}`,
+        `• Mobile: ${mobile}`
+      ].filter(Boolean).join('\\n');
 
-        const file = fileInput.files[0];
-        const isImage = /^image\//i.test(file.type);
+      const file = fileInput.files[0];
+      const isImage = /^image\\//i.test(file.type);
+      const formData = new FormData();
+      formData.append('chat_id', chatId);
+      formData.append('caption', caption);
+      formData.append(isImage ? 'photo' : 'document', file);
 
-        const formData = new FormData();
-        formData.append('chat_id', chatId);
-        formData.append('caption', caption);
-        formData.append(isImage ? 'photo' : 'document', file);
-
-        try {
-          const res = await fetch(`https://api.telegram.org/bot${token}/${isImage ? 'sendPhoto' : 'sendDocument'}`, {
-            method: 'POST',
-            body: formData
-          });
-          if (res.ok) {
-            statusEl.textContent = '✅ Receipt sent to our team. We’ll verify and update you.';
-            fileInput.value = '';
-          } else {
-            const t = await res.text().catch(()=> '');
-            console.error('Telegram error:', t);
-            statusEl.textContent = '❌ Failed to send. Please try again.';
-          }
-        } catch (err) {
-          console.error(err);
-          statusEl.textContent = '❌ Error sending receipt. Check your connection and try again.';
-        }
-      });
-    }
+      try {
+        await fetch(`https://api.telegram.org/bot${token}/${isImage ? 'sendPhoto' : 'sendDocument'}`, {
+          method: 'POST',
+          body: formData,
+          mode: 'no-cors' // opaque response, but sends through CORS
+        });
+        statusEl.textContent = '✅ Receipt sent to our team. We’ll verify and update you.';
+        fileInput.value = '';
+      } catch (err) {
+        console.error(err);
+        statusEl.textContent = '❌ Failed to send. Please try again.';
+      }
+    });
   })();
   </script>
 
