--- a/order/index.html
+++ b/order/index.html
@@ -90,56 +90,37 @@
       border-radius: 12px;
       box-shadow: 0 10px 20px rgba(0,0,0,.15);
     }
-    /* === SG Privacy/Data Notice (BEGIN) === */
-#sg-privacy-fab{
-  position:fixed; right:12px; bottom:12px; z-index:2147483647;
-  padding:10px 12px; border:1px solid #ddd; background:#ffffff; color:#333;
-  border-radius:999px; font-size:.9rem; box-shadow:0 2px 10px rgba(0,0,0,.08);
-}
-#sg-privacy-fab:hover{ background:#f7f7f7; }
 
-#sg-privacy-modal[hidden]{ display:none; }
-#sg-privacy-modal{ position:fixed; inset:0; z-index:2147483646; }
-#sg-privacy-modal .sg-privacy-modal__backdrop{
-  position:absolute; inset:0; background:rgba(0,0,0,.45);
-}
-#sg-privacy-modal .sg-privacy-modal__panel{
-  position:absolute; right:12px; bottom:64px; width:min(95vw, 360px);
-  background:#fff; border:1px solid #e6e6e6; border-radius:14px;
-  box-shadow:0 10px 30px rgba(0,0,0,.18); overflow:hidden;
-}
-.sg-privacy-modal__hdr{
-  display:flex; align-items:center; justify-content:space-between;
-  padding:10px 12px; background:#f8f8f8; border-bottom:1px solid #eee;
-}
-.sg-privacy-modal__hdr h3{ margin:0; font-size:1rem; }
-.sg-privacy-modal__close{
-  border:0; background:transparent; font-size:1.2rem; line-height:1; cursor:pointer; color:#555;
-}
-.sg-privacy-modal__content{ padding:12px; font-size:.95rem; line-height:1.5; }
-.sg-privacy-modal__content a{ color:#333; text-decoration:underline; }
-
-#sg-privacy-toast[hidden]{ display:none; }
-#sg-privacy-toast{
-  position:fixed; left:50%; transform:translateX(-50%);
-  bottom:80px; z-index:2147483645; max-width:min(92vw, 520px);
-}
-.sg-privacy-toast__card{
-  display:flex; gap:6px; align-items:center; padding:10px 12px;
-  background:#111; color:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,.3);
-  font-size:.9rem;
-}
-.sg-privacy-toast__card a{ color:#fff; text-decoration:underline; }
-.sg-privacy-toast__close{
-  margin-left:auto; border:0; background:transparent; color:#fff; font-size:1.1rem; cursor:pointer;
-}
-/* Respect your existing sticky footer: add bottom spacing if needed */
-@media (max-width:480px){
-  #sg-privacy-fab{ bottom:56px; }      /* lift if you have a bottom bar */
-  #sg-privacy-toast{ bottom:120px; }   /* lift toast above bars */
-}
-/* === SG Privacy/Data Notice (END) === */
-
+    /* === SG Privacy/Data Notice (keepable base styles; injector adds its own too) === */
+    #sg-privacy-fab{
+      position:fixed; right:12px; bottom:12px; z-index:2147483647;
+      padding:10px 12px; border:1px solid #ddd; background:#ffffff; color:#333;
+      border-radius:999px; font-size:.9rem; box-shadow:0 2px 10px rgba(0,0,0,.08);
+    }
+    #sg-privacy-fab:hover{ background:#f7f7f7; }
+    #sg-privacy-modal[hidden]{ display:none; }
+    #sg-privacy-modal{ position:fixed; inset:0; z-index:2147483646; }
+    #sg-privacy-modal .sg-privacy-modal__backdrop{ position:absolute; inset:0; background:rgba(0,0,0,.45); }
+    #sg-privacy-modal .sg-privacy-modal__panel{
+      position:absolute; right:12px; bottom:64px; width:min(95vw, 360px);
+      background:#fff; border:1px solid #e6e6e6; border-radius:14px;
+      box-shadow:0 10px 30px rgba(0,0,0,.18); overflow:hidden;
+    }
+    .sg-privacy-modal__hdr{ display:flex; align-items:center; justify-content:space-between;
+      padding:10px 12px; background:#f8f8f8; border-bottom:1px solid #eee; }
+    .sg-privacy-modal__hdr h3{ margin:0; font-size:1rem; }
+    .sg-privacy-modal__close{ border:0; background:transparent; font-size:1.2rem; line-height:1; cursor:pointer; color:#555; }
+    .sg-privacy-modal__content{ padding:12px; font-size:.95rem; line-height:1.5; }
+    .sg-privacy-modal__content a{ color:#333; text-decoration:underline; }
+    #sg-privacy-toast[hidden]{ display:none; }
+    #sg-privacy-toast{ position:fixed; left:50%; transform:translateX(-50%); bottom:80px; z-index:2147483645; max-width:min(92vw, 520px); }
+    .sg-privacy-toast__card{ display:flex; gap:6px; align-items:center; padding:10px 12px; background:#111; color:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,.3); font-size:.9rem; }
+    .sg-privacy-toast__card a{ color:#fff; text-decoration:underline; }
+    .sg-privacy-toast__close{ margin-left:auto; border:0; background:transparent; color:#fff; font-size:1.1rem; cursor:pointer; }
+    @media (max-width:480px){
+      #sg-privacy-fab{ bottom:56px; }      /* lift if you have a bottom bar */
+      #sg-privacy-toast{ bottom:120px; }   /* lift toast above bars */
+    }
   </style>
 </head>
 
@@ -319,13 +300,63 @@
       </div>
     </div>
   </div>
-  <!-- === SG Privacy/Data Notice (BEGIN) === -->
-<!-- Floating button -->
+
+  <!-- === SG Privacy/Data Notice — Single-File Injector (v4) [UPDATED] === -->
+  <script>
+  (function(){
+    // Remove any old duplicates if present
+    ['sg-privacy-fab','sg-privacy-modal','sg-privacy-toast'].forEach(function(id){
+      var el = document.getElementById(id);
+      if (el && el.parentNode) el.parentNode.removeChild(el);
+    });
+    var oldStyle = document.querySelector('style[data-sg-privacy]');
+    if (oldStyle && oldStyle.parentNode) oldStyle.parentNode.removeChild(oldStyle);
+
+    function ready(fn){ if(document.readyState==='loading'){document.addEventListener('DOMContentLoaded',fn);} else { fn(); } }
+
+    ready(function(){
+      // --- Inject CSS ---
+      var style = document.createElement('style');
+      style.setAttribute('data-sg-privacy','v4');
+      style.textContent = `
+#sg-privacy-fab{
+  position:fixed; right:12px; bottom:12px; z-index:2147483647;
+  padding:10px 12px; border:1px solid #ddd; background:#ffffff; color:#333;
+  border-radius:999px; font-size:.9rem; box-shadow:0 2px 10px rgba(0,0,0,.08);
+}
+#sg-privacy-fab:hover{ background:#f7f7f7; }
+#sg-privacy-modal[hidden]{ display:none; }
+#sg-privacy-modal{ position:fixed; inset:0; z-index:2147483646; }
+#sg-privacy-modal .sg-privacy-modal__backdrop{ position:absolute; inset:0; background:rgba(0,0,0,.45); }
+#sg-privacy-modal .sg-privacy-modal__panel{
+  position:absolute; right:12px; bottom:64px; width:min(95vw, 360px);
+  background:#fff; border:1px solid #e6e6e6; border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,.18); overflow:hidden;
+}
+.sg-privacy-modal__hdr{ display:flex; align-items:center; justify-content:space-between;
+  padding:10px 12px; background:#f8f8f8; border-bottom:1px solid #eee; }
+.sg-privacy-modal__hdr h3{ margin:0; font-size:1rem; }
+.sg-privacy-modal__close{ border:0; background:transparent; font-size:1.2rem; line-height:1; cursor:pointer; color:#555; }
+.sg-privacy-modal__content{ padding:12px; font-size:.95rem; line-height:1.5; }
+.sg-privacy-modal__content a{ color:#333; text-decoration:underline; }
+#sg-privacy-toast[hidden]{ display:none; }
+#sg-privacy-toast{ position:fixed; left:50%; transform:translateX(-50%); bottom:80px; z-index:2147483645; max-width:min(92vw, 520px); }
+.sg-privacy-toast__card{ display:flex; gap:6px; align-items:center; padding:10px 12px; background:#111; color:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,.3); font-size:.9rem; }
+.sg-privacy-toast__card a{ color:#fff; text-decoration:underline; }
+.sg-privacy-toast__close{ margin-left:auto; border:0; background:transparent; color:#fff; font-size:1.1rem; cursor:pointer; }
+@media (max-width:480px){
+  #sg-privacy-fab{ bottom:56px; }
+  #sg-privacy-toast{ bottom:120px; }
+}`;
+      document.head.appendChild(style);
+
+      // --- Inject HTML ---
+      var wrap = document.createElement('div');
+      wrap.innerHTML = `
 <button id="sg-privacy-fab" aria-haspopup="dialog" aria-controls="sg-privacy-modal" aria-label="Privacy & Data">
   Privacy • Data
 </button>
 
-<!-- Compact modal -->
 <div id="sg-privacy-modal" role="dialog" aria-modal="true" aria-labelledby="sg-privacy-title" hidden>
   <div class="sg-privacy-modal__panel">
     <header class="sg-privacy-modal__hdr">
@@ -343,7 +374,6 @@
   <div class="sg-privacy-modal__backdrop" aria-hidden="true"></div>
 </div>
 
-<!-- First-visit toast -->
 <div id="sg-privacy-toast" hidden role="status" aria-live="polite">
   <div class="sg-privacy-toast__card">
     <span>We value your privacy. Read our</span>
@@ -353,8 +383,40 @@
     <button class="sg-privacy-toast__close" aria-label="Dismiss">×</button>
   </div>
 </div>
-<!-- === SG Privacy/Data Notice (END) === -->
+      `.trim();
+      document.body.appendChild(wrap);
 
+      // --- Behavior wiring ---
+      var fab = document.getElementById('sg-privacy-fab');
+      var modal = document.getElementById('sg-privacy-modal');
+      var backdrop = modal.querySelector('.sg-privacy-modal__backdrop');
+      var btnClose = modal.querySelector('.sg-privacy-modal__close');
+      var toast = document.getElementById('sg-privacy-toast');
+      var toastClose = toast.querySelector('.sg-privacy-toast__close');
+      var LS_KEY = 'sg_privacy_toast_dismissed_v1';
+
+      function openModal(){ modal.hidden=false; document.body.style.overflow='hidden'; fab.setAttribute('aria-expanded','true'); }
+      function closeModal(){ modal.hidden=true; document.body.style.overflow=''; fab.setAttribute('aria-expanded','false'); }
+
+      fab.addEventListener('click', openModal);
+      backdrop.addEventListener('click', closeModal);
+      btnClose.addEventListener('click', closeModal);
+      document.addEventListener('keydown', function(e){ if(e.key==='Escape') closeModal(); });
+
+      try{
+        if(localStorage.getItem(LS_KEY)!=='1'){
+          toast.hidden=false;
+          setTimeout(function(){ toast.hidden=true; }, 6000);
+        }
+      }catch(e){}
+      toastClose.addEventListener('click', function(){
+        toast.hidden=true;
+        try{ localStorage.setItem(LS_KEY,'1'); }catch(e){}
+      });
+    });
+  })();
+  </script>
+  <!-- === SG Privacy/Data Notice — END [UPDATED] === -->
 
   <!-- Toast -->
   <div id="toast" class="toast hidden"></div>
@@ -459,7 +521,7 @@
           total ? ('• Total: ' + total) : '',
           '• Name: ' + fullName,
           '• Mobile: ' + mobile
-        ].filter(Boolean).join('\\n');
+        ].filter(Boolean).join('\n');
 
         capIn.value = caption;
         statusEl.textContent = 'Sending receipt…';
@@ -478,75 +540,74 @@
       }
     }
   </script>
+
   <!-- ===== Toast upgrade: top-center, close button, auto-dismiss, click-to-dismiss ===== -->
-<script>
-(function(){
-  // Ensure a toast element exists
-  var t = document.getElementById('toast');
-  if(!t){
-    t = document.createElement('div');
-    t.id = 'toast';
-    document.body.appendChild(t);
-  }
-
-  // Inject compact, top-center styles (won't block page center)
-  var css = document.createElement('style');
-  css.textContent = `
-    #toast{
-      position:fixed; left:50%; top:76px; transform:translateX(-50%);
-      z-index:1100; max-width:92vw; background:rgba(17,24,39,.96); color:#fff;
-      padding:12px 14px; border-radius:12px; box-shadow:0 10px 20px rgba(0,0,0,.15);
-      font-size:14px; line-height:1.35; display:none; opacity:0; transition:opacity .18s ease;
+  <script>
+  (function(){
+    // Ensure a toast element exists
+    var t = document.getElementById('toast');
+    if(!t){
+      t = document.createElement('div');
+      t.id = 'toast';
+      document.body.appendChild(t);
     }
-    #toast.show{ display:block; opacity:1; }
-    #toast .toast-row{ display:flex; align-items:center; gap:10px; }
-    #toast .toast-msg{ flex:1; text-align:center; }
-    #toast .toast-close{
-      appearance:none; border:0; background:transparent; color:#fff; font-size:18px; line-height:1;
-      padding:2px 6px; cursor:pointer; opacity:.9;
-    }
-    #toast .toast-close:active{ transform:translateY(1px); }
-  `;
-  document.head.appendChild(css);
 
-  var hideTimer = null;
+    // Inject compact, top-center styles (won't block page center)
+    var css = document.createElement('style');
+    css.textContent = `
+      #toast{
+        position:fixed; left:50%; top:76px; transform:translateX(-50%);
+        z-index:1100; max-width:92vw; background:rgba(17,24,39,.96); color:#fff;
+        padding:12px 14px; border-radius:12px; box-shadow:0 10px 20px rgba(0,0,0,.15);
+        font-size:14px; line-height:1.35; display:none; opacity:0; transition:opacity .18s ease;
+      }
+      #toast.show{ display:block; opacity:1; }
+      #toast .toast-row{ display:flex; align-items:center; gap:10px; }
+      #toast .toast-msg{ flex:1; text-align:center; }
+      #toast .toast-close{
+        appearance:none; border:0; background:transparent; color:#fff; font-size:18px; line-height:1;
+        padding:2px 6px; cursor:pointer; opacity:.9;
+      }
+      #toast .toast-close:active{ transform:translateY(1px); }
+    `;
+    document.head.appendChild(css);
 
-  function hideToast(){
-    clearTimeout(hideTimer);
-    t.classList.remove('show');
-    setTimeout(function(){ if(!t.classList.contains('show')) t.style.display='none'; }, 180);
-  }
+    var hideTimer = null;
 
-  function renderToast(msg){
-    t.innerHTML = '';
-    var row = document.createElement('div'); row.className = 'toast-row';
-    var msgEl = document.createElement('div'); msgEl.className = 'toast-msg';
-    msgEl.textContent = (msg == null ? '' : String(msg));
-    var btn = document.createElement('button'); btn.className = 'toast-close'; btn.setAttribute('aria-label','Close'); btn.textContent = '×';
-    btn.onclick = hideToast;
-    row.appendChild(msgEl); row.appendChild(btn);
-    t.appendChild(row);
-    // Tap anywhere on the toast to dismiss
-    t.onclick = hideToast;
-  }
-
-  // Replace global showToast so ALL calls use this version
-  window.showToast = function(msg, ms){
-    try{
-      ms = ms || 5000; // default 5s
-      renderToast(msg);
+    function hideToast(){
       clearTimeout(hideTimer);
-      t.style.display = 'block';
-      // small delay to allow CSS transition to pick up
-      requestAnimationFrame(function(){ t.classList.add('show'); });
-      hideTimer = setTimeout(hideToast, ms);
-    }catch(e){
-      // Fallback if anything ever goes wrong
-      console.warn('[toast-upgrade] error:', e);
-      alert(msg);
+      t.classList.remove('show');
+      setTimeout(function(){ if(!t.classList.contains('show')) t.style.display='none'; }, 180);
     }
-  };
-})();
-</script>
+
+    function renderToast(msg){
+      t.innerHTML = '';
+      var row = document.createElement('div'); row.className = 'toast-row';
+      var msgEl = document.createElement('div'); msgEl.className = 'toast-msg';
+      msgEl.textContent = (msg == null ? '' : String(msg));
+      var btn = document.createElement('button'); btn.className = 'toast-close'; btn.setAttribute('aria-label','Close'); btn.textContent = '×';
+      btn.onclick = hideToast;
+      row.appendChild(msgEl); row.appendChild(btn);
+      t.appendChild(row);
+      // Tap anywhere on the toast to dismiss
+      t.onclick = hideToast;
+    }
+
+    // Replace global showToast so ALL calls use this version
+    window.showToast = function(msg, ms){
+      try{
+        ms = ms || 5000; // default 5s
+        renderToast(msg);
+        clearTimeout(hideTimer);
+        t.style.display = 'block';
+        requestAnimationFrame(function(){ t.classList.add('show'); });
+        hideTimer = setTimeout(hideToast, ms);
+      }catch(e){
+        console.warn('[toast-upgrade] error:', e);
+        alert(msg);
+      }
+    };
+  })();
+  </script>
 </body>
 </html>
